--- a/kubernetes/greg-10-08-2022/pod.yaml
+++ b/kubernetes/greg-10-08-2022/pod.yaml
@@ -8,3 +8,11 @@ spec:
   containers:
   - name: training-application
     image: 651828462322.dkr.ecr.eu-west-3.amazonaws.com/node-web-app:latest
+    # Taking random values from kubernetes docs.
+    resources:
+      requests:
+        memory: "64Mi"
+        cpu: "250m"
+      limits:
+        memory: "128Mi"
+        cpu: "500m"
