Step 6: Make sure your service is resilient

--- a/kubernetes/greg-10-08-2022/service.yaml
+++ b/kubernetes/greg-10-08-2022/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: greg-service
 spec:
   selector:
-    app.kubernetes.io/name: trainingClusterApp
+    pod-selector: main-pod-selector
   ports:
     - protocol: TCP
       port: 80
