--- a/expo-training/.vscode/settings.json
+++ b/expo-training/.vscode/settings.json
@@ -4,9 +4,9 @@
     "**/.expo/**": true
   },
   "editor.codeActionsOnSave": {
-    "source.fixAll": true,
-    "source.addMissingImports": true,
-    "source.organizeImports": true
+    "source.fixAll": "explicit",
+    "source.addMissingImports": "explicit",
+    "source.organizeImports": "explicit"
   },
   "editor.formatOnSave": false,
 }
