--- a/graphql/package.json
+++ b/graphql/package.json
@@ -5,17 +5,24 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
+    "compile": "tsc",
+    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
     "test:integration": "NODE_OPTIONS=\"--loader ts-node/esm\"  mocha \"./star-wars/**/*integration.ts\" -w"
   },
   "dependencies": {
     "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
     "chai": "^4.3.10",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "graphql": "^16.8.1",
     "mocha": "^10.2.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4"
+    "@types/node": "^20.11.5",
+    "@types/express": "^20.11.5",
+    "nodemon": "^3.0.3",
+    "typescript": "^5.3.3"
   }
 }
