--- a/devdays-2025-ai/.env.local.example
+++ b/devdays-2025-ai/.env.local.example
@@ -1,3 +1,4 @@
-export AZURE_OPENAI_ENDPOINT="<get from 1Password>"
+// Fabien TODO: put the right API_KEYS in 1password
+export AZURE_OPENAI_ENDPOINT="https://laliloaiazureservices.openai.azure.com"
 export AZURE_OPENAI_API_KEY="<get from 1Password>"
 export EMBEDDING_DIMENSION=10
