Update workshop 2 readme

--- a/devdays-2025-ai/workshop-part-2/.env.local.example
+++ b/devdays-2025-ai/workshop-part-2/.env.local.example
@@ -1,4 +1,7 @@
-// Fabien TODO: put the right API_KEYS in 1password
-export AZURE_OPENAI_ENDPOINT="https://laliloaiazureservices.openai.azure.com"
-export AZURE_OPENAI_API_KEY="<get from 1Password>"
-export EMBEDDING_DIMENSION=100
+export AZURE_OPENAI_ENDPOINT="https://laliloaiazureservices.services.ai.azure.com/"
+export AZURE_OPENAI_API_KEY="<get from 1Password: Devdays AI API tokens>"
+
+export EMBEDDING_DIMENSION=1536
+
+# TODO: @Greg - please specify which Slack token you used
+export SLACK_TOKEN="<get from 1Password>"
