--- a/advanced-graphics/threeJs/practice/package.json
+++ b/advanced-graphics/threeJs/practice/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "@types/three": "^0.171.0",
     "typescript": "~5.6.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-glsl": "^1.3.0"
   },
   "dependencies": {
     "three": "^0.172.0"
