Fix typo and todo

--- a/devdays-2025-ai/workshop-part-2/.env.local.example
+++ b/devdays-2025-ai/workshop-part-2/.env.local.example
@@ -3,5 +3,4 @@ export AZURE_OPENAI_API_KEY="<get from 1Password: Devdays AI API tokens>"
 
 export EMBEDDING_DIMENSION=1536
 
-# TODO: @Greg - please specify which Slack token you used
-export SLACK_TOKEN="<get from 1Password>"
+export SLACK_TOKEN="<get from 1Password: Devdays AI - Slack token>"
