--- a/devdays-2025-ai/workshop-part-2/.env.local.example
+++ b/devdays-2025-ai/workshop-part-2/.env.local.example
@@ -1,6 +1,6 @@
 export AZURE_OPENAI_ENDPOINT="https://laliloaiazureservices.services.ai.azure.com/"
 export AZURE_OPENAI_API_KEY="<get from 1Password: Devdays AI API tokens>"
 
-export EMBEDDING_DIMENSION=1536
+export EMBEDDING_DIMENSION=100
 
 export SLACK_TOKEN="<get from 1Password: Devdays AI - Slack token>"
