📝 write how-to section for slack token

--- a/devdays-2025-ai/workshop-part-2/.env.local.example
+++ b/devdays-2025-ai/workshop-part-2/.env.local.example
@@ -3,4 +3,7 @@ export AZURE_OPENAI_API_KEY="<get from 1Password: Devdays AI API tokens>"
 
 export EMBEDDING_DIMENSION=1536
 
+# To create a slack token you need to create an app first using https://api.slack.com/apps
+# Access your token in OAuth & Permission section on the left menu (you need to install the app into our workspace).
+# Update the Bot Token Scopes if you need specific set of permission.
 export SLACK_TOKEN="<get from 1Password: Devdays AI - Slack token>"
